--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
@@ -1,9 +1,9 @@
 ﻿l_polish:
 
 #Origin
- origin_pd_aw_tree_of_life: "Megaflora - Drzewo życia"
+ origin_pd_aw_tree_of_life: "Drzewo życia megaflory"
  origin_pd_aw_tree_of_life_desc: "Ten rój wyewoluował w symbiotycznej relacji z olbrzymim drzewem megaflory, którego korzenie rozprzestrzeniły się w każdy zakątek planety i zmieniły ekosystem tak, aby odpowiadał zarówno jemu, jak i dronom. Rój miałby ogromne trudności z przetrwaniem bez wsparcia tego drzewa."
- origin_tooltip_pd_aw_tree_of_life_start_effects: "- $HOMEWORLD$$TABBED_NEW_LINE$- Cechy planetarne: ['concept_tree_of_life']$TABBED_NEW_LINE$- Modyfikatory planetarne: ['concept_pd_aw_tree_of_life_modifier']$NEW_LINE$- Zasiedlone planety:$TABBED_NEW_LINE$- Cechy planetarne: ['concept_pd_aw_tree_of_life_sapling']$NEW_LINE$- Kolonie bez §Ysadzonek Drzewa życia§!:$TABBED_NEW_LINE$- Decyzja planetarna: ['concept_transplant_pd_aw_tree_of_life']$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] na koloniach Poddanych"
+ origin_tooltip_pd_aw_tree_of_life_start_effects: "- $HOMEWORLD$$TABBED_NEW_LINE$- Cechy planety: ['concept_tree_of_life']$TABBED_NEW_LINE$- Modyfikatory planety: ['concept_pd_aw_tree_of_life_modifier']$NEW_LINE$- Skolonizowane planety:$TABBED_NEW_LINE$- Cechy planety: ['concept_pd_aw_tree_of_life_sapling']$NEW_LINE$- Kolonie bez §Ysadzonek Drzewa życia§!:$TABBED_NEW_LINE$- Decyzja planetarna: ['concept_transplant_pd_aw_tree_of_life']$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] na koloniach Poddanych"
  origin_tooltip_pd_aw_tree_of_life_start_negative_effects: "- Nie można terraformować planet"
 
 #Concepts
@@ -25,24 +25,24 @@
  d_pd_aw_tree_of_life_colony_desc: "Odrost Wielkiego Drzewa, przesadzony tutaj przez Rój. Potrzeba czasu, by osiągnął pełną dojrzałość."
  d_pd_aw_tree_of_life_bloomed: "Rozkwitłe Drzewo Życia"
  d_pd_aw_tree_of_life_bloomed_desc: "Wielkie Drzewo od niezliczonych pokoleń dawało schronienie i wsparcie Rojowi. Teraz, rozkwitłe, roztacza swoje dobroczynne oddziaływanie na każdego drona."
- d_pd_tree_of_life_habitat: "Siedlisko Drzewa Życia"
+ d_pd_tree_of_life_habitat: "Stacja mieszkalna Drzewa Życia"
  d_pd_tree_of_life_habitat_desc: "Odrost Wielkiego Drzewa, przesadzony tutaj przez Rój. Ta miniaturowa wersja w obrębie siedliska nigdy nie osiągnie pełnego potencjału, ale wesprze drony stacjonujące w tym miejscu."
  d_pd_tree_of_life_ringworld: "Drzewo Życia na Świecie-Pierścieniu"
  d_pd_tree_of_life_ringworld_desc: "Odrost Wielkiego Drzewa, przesadzony tutaj przez Rój. Choć potrafi rosnąć na powierzchni świata-pierścienia, zbyt płytka warstwa gleby nie pozwala mu osiągnąć pełnych rozmiarów."
 
 #Planets
- pc_pd_megaflora_hive: "Świat Roju Megaflory"
+ pc_pd_megaflora_hive: "Świat megaflory roju"
  pc_pd_megaflora_hive_desc: "Skalisty świat z atmosferą azotowo-tlenową, gęsto zalesiony i z dobrze rozwiniętą hydrosferą. Na jego powierzchni rośnie drzewo megaflory, psionicznie połączone z Umysłem Roju, który je pielęgnuje. System korzeniowy planety stanowi podstawową strukturę konstrukcyjną i mieszkalną roju. Choć proces jego wzrostu jest powolny, zdolności regeneracyjne czynią go łatwym do obrony i naprawy."
  trait_pc_pd_megaflora_hive_preference: "Preferencja: Świat Roju Megaflory"
  trait_pc_pd_megaflora_hive_preference_desc:1 "$trait_pc_arctic_preference_desc$"
- pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania: Świat Roju Megaflory"
- mod_pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania: Świat Roju Megaflory"
+ pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania świata megaflory roju"
+ mod_pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania świata roju megaflory"
  pc_pd_megaflora_hive_bloomed: "Świat Roju Megaflory"
  pc_pd_megaflora_hive_bloomed_desc: "Skalisty świat z atmosferą azotowo-tlenową, gęsto zalesiony i z dobrze rozwiniętą hydrosferą. Na jego powierzchni rośnie drzewo megaflory, psionicznie połączone z Umysłem Roju, który je pielęgnuje."
  trait_pc_pd_megaflora_hive_bloomed_preference: "Preferencja: Świat Roju Megaflory"
  trait_pc_pd_megaflora_hive_bloomed_preference_desc:1 "$trait_pc_arctic_preference_desc$"
- pc_pd_megaflora_hive_bloomed_habitability: "Możliwość zamieszkania: Świat Roju Megaflory"
- mod_pc_pd_megaflora_hive_bloomed_habitability: "Możliwość zamieszkania: Świat Roju Megaflory"
+ pc_pd_megaflora_hive_bloomed_habitability: "Możliwość zamieszkania świata roju megaflory"
+ mod_pc_pd_megaflora_hive_bloomed_habitability: "Możliwość zamieszkania świata roju megaflory"
 
 #Start Text
  START_SCREEN_PD_TREE_OF_LIFE: "Gdy przebudziliśmy się do świadomości, służyliśmy Drzewu, a Drzewo służyło nam. Opiekujemy się Drzewem, karmimy Drzewo, chronimy Drzewo, a Drzewo karmi nas. Dla dobra Drzewa rozprzestrzeniliśmy się po [GetHomeWorldName], sadząc i doglądając jego odrostów wszędzie, gdzie się udaliśmy.\n\nNasz świat służy Drzewu od stuleci, a jednak obawiamy się, że Drzewo nie jest całkowicie bezpieczne, odkąd poznaliśmy zagrożenia płynące z otchłani kosmosu. Od dawna wiemy, że to nie jedyna planeta; galaktyka pełna jest światów pozbawionych Drzew, a my pragniemy to zmienić.\n\nMusimy chronić Drzewo. Drzewo musi się rozprzestrzenić. Drzewo musi rosnąć."
@@ -92,17 +92,17 @@
  district_pd_flora_hive_research_desc: "Niezliczone laboratoria wypełnione są dronami skupionymi na badaniach."
  district_pd_flora_hive_research_plural: "Dzielnice badawcze"
  district_pd_flora_hive_administrative: "Dzielnica synaptyczna"
- district_pd_flora_hive_administrative_desc: "Synaptyczne nexusy wzmacniają psioniczne połączenia roju, rozszerzając jego wolę i przewodnictwo w kosmosie."
+ district_pd_flora_hive_administrative_desc: "Węzły synaptyczne wzmacniają psioniczne połączenia roju, rozszerzając jego wolę i przewodnictwo w kosmosie."
  district_pd_flora_hive_administrative_plural: "Dzielnice synaptyczne"
- pc_pd_flora_hive: "Świat Korony Megaflory"
- pc_pd_flora_hive_desc: "Ten Rój wyewoluował w symbiotycznej relacji z olbrzymim drzewem megaflory, którego korzenie rozprzestrzeniły się w każdy zakątek planety i zmieniły ekosystem, aby odpowiadał zarówno jemu, jak i dronom. Świat został rozwinięty w bastion zaawansowanych procesów myślowych i jest silnie broniony przez zamieszkujący go rój."
+ pc_pd_flora_hive: "Świat korony megaflory"
+ pc_pd_flora_hive_desc: "Ten rój wyewoluował w symbiotycznej relacji z olbrzymim drzewem megaflory, którego korzenie rozprzestrzeniły się w każdy zakątek planety i zmieniły ekosystem, aby odpowiadał zarówno jemu, jak i dronom. Świat został rozwinięty w bastion zaawansowanych procesów myślowych i jest silnie broniony przez zamieszkujący go rój."
  pc_pd_flora_hive_adj: "zalesiony"
- mod_pc_pd_flora_hive_habitability: "Możliwość życia: Świat Korony Megaflory"
- trait_pc_pd_flora_hive_preference: "Preferencja: Świat Korony Megaflory"
+ mod_pc_pd_flora_hive_habitability: "Możliwość zamieszkania świata korony megaflory"
+ trait_pc_pd_flora_hive_preference: "Preferencje świata korony megaflory"
  trait_pc_pd_flora_hive_preference_desc: "$trait_pc_arctic_preference_desc$"
- pd_aw_flora_hive_military: "Świat Korony Megaflory"
- pd_aw_flora_hive_military_desc: "Ten świat jest kluczowy dla rdzenia funkcjonowania Rojowego Umysłu Megaflory i został ufortyfikowany przeciwko zewnętrznym zagrożeniom i wpływom. Potężna tarcza otacza planetę, a drony-wojownicy są gotowe zapewnić jej ochronę."
- decision_pd_flora_hive_crown_project: "Projekt roju Megaflory – Korona"
+ pd_aw_flora_hive_military: "Świat korony megaflory"
+ pd_aw_flora_hive_military_desc: "Ten świat jest kluczowy dla rdzenia funkcjonowania umysłu zbiorowego megaflory i został ufortyfikowany przeciwko zewnętrznym zagrożeniom i wpływom. Potężna tarcza otacza planetę, a drony-wojownicy są gotowe zapewnić jej ochronę."
+ decision_pd_flora_hive_crown_project: "Projekt roju megaflory – korona"
  decision_pd_flora_hive_crown_project_desc: "Ten rojowy świat zostanie rozwinięty w bastion zaawansowanych procesów myślowych dla świadomości roju."
  decision_pd_flora_hive_crown_project_effects: "Przekształca planetę w §Y$pc_pd_flora_hive$§!, zwiększając £housing£ §Ymieszkania§!, §Yprodukcję zasobów§! i §Ywzrost populacji§! oraz odblokowując specjalne £district£ §Ydystrykty arkolgiczne§!, kosztem §Runiedostępnienia§! zasobów naturalnych, uniemożliwiając dalszą budowę £district£ §Ygeneratorów§!, §Ykopalń§! i §Yfarm§!."
  decision_pd_flora_hive_crown_project_effects_short: "Zwiększa £housing£ §Ymieszkania§!, §Yprodukcję zasobów§! i §Ywzrost populacji§!\nOdblokowuje £district£ §Ydystrykty arkolgiczne§!\nBlokuje budowę £district£ §Ygeneratorów§!, §Ykopalń§! i §Yfarm§!"
@@ -117,6 +117,6 @@
  job_pd_tol_naval_admin_gestalt_plural: "Drony logistyczne"
  job_pd_tol_naval_admin_gestalt_desc: "Wysoce wyspecjalizowane w zarządzaniu zaopatrzeniem, te drony zapewniają sprawne operacje floty, utrzymując i kontrolując kluczowe linie dostaw."
  mod_job_pd_tol_naval_admin_gestalt_add: "Miejsce pracy: $job_pd_tol_naval_admin_gestalt$"
- mod_job_pd_tol_naval_admin_gestalt_per_pop: "§G+1§! miejsce pracy $job_pd_tol_naval_admin_gestalt$ na $VALUE$ Popów"
+ mod_job_pd_tol_naval_admin_gestalt_per_pop: "§G+1§! miejsc pracy $job_pd_tol_naval_admin_gestalt$ na $VALUE$ Popów"
  mod_job_pd_tol_naval_admin_gestalt_per_pop_short: "\n§G+1§! £mod_job_pd_tol_naval_admin_gestalt_add£ na $VALUE$ £pop£"
- job_pd_tol_naval_admin_gestalt_effect_desc: "£job_pd_tol_naval_admin_gestalt£ $job_pd_tol_naval_admin_gestalt_plural$ zwiększają efektywność floty, zamieniając £minerals£ §Y$minerals$§! w £society£ §Ypunkty badań§! i £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
+ job_pd_tol_naval_admin_gestalt_effect_desc: "£job_pd_tol_naval_admin_gestalt£ $job_pd_tol_naval_admin_gestalt_plural$ zwiększają efektywność floty, zamieniając £minerals£ §Y$minerals$§! w £society£ §YBadania socjologiczne§! i £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§!."
