--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
@@ -3,7 +3,7 @@
 #Origin
  origin_pd_aw_tree_of_life: "Drzewo życia megaflory"
  origin_pd_aw_tree_of_life_desc: "Ten rój wyewoluował w symbiotycznej relacji z olbrzymim drzewem megaflory, którego korzenie rozprzestrzeniły się w każdy zakątek planety i zmieniły ekosystem tak, aby odpowiadał zarówno jemu, jak i dronom. Rój miałby ogromne trudności z przetrwaniem bez wsparcia tego drzewa."
- origin_tooltip_pd_aw_tree_of_life_start_effects: "- $HOMEWORLD$$TABBED_NEW_LINE$- Cechy planety: ['concept_tree_of_life']$TABBED_NEW_LINE$- Modyfikatory planety: ['concept_pd_aw_tree_of_life_modifier']$NEW_LINE$- Skolonizowane planety:$TABBED_NEW_LINE$- Cechy planety: ['concept_pd_aw_tree_of_life_sapling']$NEW_LINE$- Kolonie bez §Ysadzonek Drzewa życia§!:$TABBED_NEW_LINE$- Decyzja planetarna: ['concept_transplant_pd_aw_tree_of_life']$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] na koloniach Poddanych"
+ origin_tooltip_pd_aw_tree_of_life_start_effects: "- $HOMEWORLD$$TABBED_NEW_LINE$- Cechy planety: ['concept_tree_of_life']$TABBED_NEW_LINE$- Modyfikatory planety: ['concept_pd_aw_tree_of_life_modifier']$NEW_LINE$- Skolonizowane planety:$TABBED_NEW_LINE$- Cechy planety: ['concept_pd_aw_tree_of_life_sapling']$NEW_LINE$- Kolonie bez §Ysadzonek drzewa życia§!:$TABBED_NEW_LINE$- Decyzja planetarna: ['concept_transplant_pd_aw_tree_of_life']$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] na koloniach Poddanych"
  origin_tooltip_pd_aw_tree_of_life_start_negative_effects: "- Nie można terraformować planet"
 
 #Concepts
@@ -31,8 +31,8 @@
  d_pd_tree_of_life_ringworld_desc: "Odrost Wielkiego Drzewa, przesadzony tutaj przez Rój. Choć potrafi rosnąć na powierzchni świata-pierścienia, zbyt płytka warstwa gleby nie pozwala mu osiągnąć pełnych rozmiarów."
 
 #Planets
- pc_pd_megaflora_hive: "Świat megaflory roju"
- pc_pd_megaflora_hive_desc: "Skalisty świat z atmosferą azotowo-tlenową, gęsto zalesiony i z dobrze rozwiniętą hydrosferą. Na jego powierzchni rośnie drzewo megaflory, psionicznie połączone z Umysłem Roju, który je pielęgnuje. System korzeniowy planety stanowi podstawową strukturę konstrukcyjną i mieszkalną roju. Choć proces jego wzrostu jest powolny, zdolności regeneracyjne czynią go łatwym do obrony i naprawy."
+ pc_pd_megaflora_hive: "Świat megaflory"
+ pc_pd_megaflora_hive_desc: "Skalisty świat z atmosferą azotowo-tlenową, gęsto zalesiony i z dobrze rozwiniętą hydrosferą. Na jego powierzchni rośnie drzewo megaflory, psionicznie połączone z umysłem zbiorowym, który je pielęgnuje. System korzeniowy planety stanowi podstawową strukturę konstrukcyjną i mieszkalną roju. Choć proces jego wzrostu jest powolny, zdolności regeneracyjne czynią go łatwym do obrony i naprawy."
  trait_pc_pd_megaflora_hive_preference: "Preferencja: Świat Roju Megaflory"
  trait_pc_pd_megaflora_hive_preference_desc:1 "$trait_pc_arctic_preference_desc$"
  pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania świata megaflory roju"
@@ -57,25 +57,25 @@
  d_pd_tree_of_life_ringarc: "Drzewo Życia na Świecie-Pierścieniu"
  d_pd_tree_of_life_ringarc_desc: "Wielkie Drzewo na tym świecie-pierścieniu jest tak w pełni rozwinięte, jak tylko pozwalają na to warunki. Jego system korzeniowy zapewnia przestrzeń dla dronów-robotników i naturalnie opiera się uszkodzeniom."
  pd_aw_no_lifetree: "Brak Drzewa Życia"
- pd_aw_no_lifetree_desc: "Bez Wielkiego Drzewa Życia rój jest niekompletny."
+ pd_aw_no_lifetree_desc: "Bez Wielkiego Drzewa Życia Rój jest niekompletny."
  pd_no_lifetree_arcology: "Brak Drzewa Życia"
  pd_no_lifetree_arcology_desc: "Planeta pokryta jest niekończącą się zabudową miejską, co czyni ją niezdolną do podtrzymania Drzewa Życia."
 
 #Decisions
  decision_pd_replant_aw_tree_of_life: "Przesadź Drzewo Życia"
- decision_pd_replant_aw_tree_of_life_desc: "Musimy zasadzić tutaj sadzonkę Wielkiego Drzewa Życia, aby nasz rój mógł się rozwijać."
+ decision_pd_replant_aw_tree_of_life_desc: "Musimy zasadzić tutaj sadzonkę Wielkiego Drzewa Życia, aby nasz Rój mógł się rozwijać."
  decision_pd_aw_bloom_tree_of_life: "Rozkwit Drzewa Życia"
  decision_pd_aw_bloom_tree_of_life_desc: "Skłonienie Wielkiego Drzewa Życia do rozkwitu wymaga znacznego czasu i zasobów, ale dzięki temu odblokujemy jego pełen potencjał."
  decision_pd_aw_bloom_tree_of_life_tooltip: "Ta planeta zostanie przekształcona w §YRozkwitły $pc_pd_megaflora_hive_bloomed$§!.\n\nPodwaja £pop£ §Ymiejsca pracy§! i £housing£ §Ymieszkania§! zapewniane przez każdy dystrykt."
 
 #Ascension Perk
- ap_pd_tree_of_life_bloomed: "Rozkwitłe Światy Roju Megaflory"
+ ap_pd_tree_of_life_bloomed: "Kwitnienie światów megaflory roju"
  ap_pd_tree_of_life_bloomed_desc: "Możemy skłonić każde Wielkie Drzewo Życia do rozkwitu, odblokowując ich pełny potencjał."
  allow_tree_of_life_bloomed: "§HOdblokowuje decyzję:§! $decision_pd_aw_bloom_tree_of_life$"
  describe_tree_of_life_bloomed_worlds: "§YRozkwitłe $pc_pd_megaflora_hive_bloomed$s§! to specjalna klasa planet, niezamieszkana przez Populacje inne niż Umysły Roju, lecz nieograniczona w liczbie £district£ §Ygeneratorów§!, §Ykopalń§! i §Yfarm§!, jakie mogą wspierać. Wszystkie dystrykty mają podwojone £pop£ §Ymiejsca pracy§! i £housing£ §Ymieszkania§!. £pop£ §YPopy§! żyjące na §YRozkwitłych $pc_pd_megaflora_hive_bloomed$§! otrzymują premię do §Yprodukcji zasobów§! §G+10%§!."
 
 #Holdings
- holding_pd_aw_tree_of_life_sapling: "Sadzonka Megaflory – Drzewo Życia"
+ holding_pd_aw_tree_of_life_sapling: "Sadzonka megaflory drzewa życia"
  holding_pd_aw_tree_of_life_sapling_desc: "Zwierzchnik tak długo żył ze swoim Drzewem Życia Megaflory, że nie jest już w stanie wyobrazić sobie egzystencji bez niego. Teraz pragnie podzielić się tym samym darem ze swoimi wasalami."
 
 #Arcology - With Arc Sub Mod
@@ -95,21 +95,21 @@
  district_pd_flora_hive_administrative_desc: "Węzły synaptyczne wzmacniają psioniczne połączenia roju, rozszerzając jego wolę i przewodnictwo w kosmosie."
  district_pd_flora_hive_administrative_plural: "Dzielnice synaptyczne"
  pc_pd_flora_hive: "Świat korony megaflory"
- pc_pd_flora_hive_desc: "Ten rój wyewoluował w symbiotycznej relacji z olbrzymim drzewem megaflory, którego korzenie rozprzestrzeniły się w każdy zakątek planety i zmieniły ekosystem, aby odpowiadał zarówno jemu, jak i dronom. Świat został rozwinięty w bastion zaawansowanych procesów myślowych i jest silnie broniony przez zamieszkujący go rój."
+ pc_pd_flora_hive_desc: "Ten Rój wyewoluował w symbiotycznej relacji z olbrzymim drzewem megaflory, którego korzenie rozprzestrzeniły się w każdy zakątek planety i zmieniły ekosystem, aby odpowiadał zarówno jemu, jak i dronom. Świat został rozwinięty w bastion zaawansowanych procesów myślowych i jest silnie broniony przez zamieszkujący go rój."
  pc_pd_flora_hive_adj: "zalesiony"
  mod_pc_pd_flora_hive_habitability: "Możliwość zamieszkania świata korony megaflory"
  trait_pc_pd_flora_hive_preference: "Preferencje świata korony megaflory"
  trait_pc_pd_flora_hive_preference_desc: "$trait_pc_arctic_preference_desc$"
  pd_aw_flora_hive_military: "Świat korony megaflory"
  pd_aw_flora_hive_military_desc: "Ten świat jest kluczowy dla rdzenia funkcjonowania umysłu zbiorowego megaflory i został ufortyfikowany przeciwko zewnętrznym zagrożeniom i wpływom. Potężna tarcza otacza planetę, a drony-wojownicy są gotowe zapewnić jej ochronę."
- decision_pd_flora_hive_crown_project: "Projekt roju megaflory – korona"
- decision_pd_flora_hive_crown_project_desc: "Ten rojowy świat zostanie rozwinięty w bastion zaawansowanych procesów myślowych dla świadomości roju."
- decision_pd_flora_hive_crown_project_effects: "Przekształca planetę w §Y$pc_pd_flora_hive$§!, zwiększając £housing£ §Ymieszkania§!, §Yprodukcję zasobów§! i §Ywzrost populacji§! oraz odblokowując specjalne £district£ §Ydystrykty arkolgiczne§!, kosztem §Runiedostępnienia§! zasobów naturalnych, uniemożliwiając dalszą budowę £district£ §Ygeneratorów§!, §Ykopalń§! i §Yfarm§!."
- decision_pd_flora_hive_crown_project_effects_short: "Zwiększa £housing£ §Ymieszkania§!, §Yprodukcję zasobów§! i §Ywzrost populacji§!\nOdblokowuje £district£ §Ydystrykty arkolgiczne§!\nBlokuje budowę £district£ §Ygeneratorów§!, §Ykopalń§! i §Yfarm§!"
+ decision_pd_flora_hive_crown_project: "Projekt megaflory – korona"
+ decision_pd_flora_hive_crown_project_desc: "Ten megafloralny świat zostanie rozwinięty w bastion zaawansowanych procesów myślowych dla świadomości umysłu zbiorowego."
+ decision_pd_flora_hive_crown_project_effects: "Przekształca planetę w §Y$pc_pd_flora_hive$§!, zwiększając liczbę £housing£ §Ymieszkań§!, §Yprodukcję zasobów§! i §Yprzyrostu populacji§! oraz odblokowując specjalne £district£ §Ydzielnice arkologii§!, kosztem §Rzablokowania§! zasobów naturalnych, uniemożliwiając dalszą budowę £district£ §Ydzielnic produkujących energię§!, §Ygórniczych§! i §Yrolniczych§!."
+ decision_pd_flora_hive_crown_project_effects_short: "Zwiększa £housing£ §Ymieszkania§!, §Yprodukcję zasobów§! i §Ywzrost populacji§!\nOdblokowuje £district£ §Ydzielnice arkologii§!\nBlokuje budowę £district£ §Ydzielnic produkujących energię§!, §Ygórniczych§! i §Yrolniczych§!"
  decision_pd_megaflora_capital_building: "Wznieś Wielkie Drzewo Życia"
  decision_pd_megaflora_capital_building_desc: "Aby zamanifestować potęgę i zasięg naszej zbiorowej świadomości, wyhodujemy potężne Wielkie Drzewo Życia. To majestatyczne drzewo znacząco wzmocni nasze operacje wśród gwiazd."
  decision_pd_megaflora_capital_building_effects: "Dodaje §Y$d_pd_megaflora_capital_building$§! do tej stolicy świata megaflory, wymieniając część potencjalnych dystryktów na wzmocnienie zdolności administracyjnych roju."
- d_pd_megaflora_capital_building: "Wielkie Drzewo Życia"
+ d_pd_megaflora_capital_building: "Wielkie drzewo życia"
  d_pd_megaflora_capital_building_desc: "To drzewo góruje nad całą planetą, stanowiąc majestatyczny znak władzy. Jest ośrodkiem naszej zbiorowej woli, od którego rozchodzą się nasze korzenie ku gwiazdom."
 
 #Jobs
