--- a/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
+++ b/planetary_diversity_ascension_worlds/localisation/polish/planetarydiversity_aw_tree_of_life_l_polish.yml
@@ -2,8 +2,8 @@
 
 #Origin
  origin_pd_aw_tree_of_life: "Drzewo życia megaflory"
- origin_pd_aw_tree_of_life_desc: "Ten rój wyewoluował w symbiotycznej relacji z olbrzymim drzewem megaflory, którego korzenie rozprzestrzeniły się w każdy zakątek planety i zmieniły ekosystem tak, aby odpowiadał zarówno jemu, jak i dronom. Rój miałby ogromne trudności z przetrwaniem bez wsparcia tego drzewa."
- origin_tooltip_pd_aw_tree_of_life_start_effects: "- $HOMEWORLD$$TABBED_NEW_LINE$- Cechy planety: ['concept_tree_of_life']$TABBED_NEW_LINE$- Modyfikatory planety: ['concept_pd_aw_tree_of_life_modifier']$NEW_LINE$- Skolonizowane planety:$TABBED_NEW_LINE$- Cechy planety: ['concept_pd_aw_tree_of_life_sapling']$NEW_LINE$- Kolonie bez §Ysadzonek drzewa życia§!:$TABBED_NEW_LINE$- Decyzja planetarna: ['concept_transplant_pd_aw_tree_of_life']$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] na koloniach Poddanych"
+ origin_pd_aw_tree_of_life_desc: "Ten rój wyewoluował w symbiotycznej relacji z olbrzymim drzewem megaflory, którego korzenie rozprzestrzeniły się w każdy zakątek planety i zmieniły ekosystem tak, aby odpowiadał zarówno jemu, jak i dronom. rój miałby ogromne trudności z przetrwaniem bez wsparcia tego drzewa."
+ origin_tooltip_pd_aw_tree_of_life_start_effects: "- $HOMEWORLD$$TABBED_NEW_LINE$- Cecha planety: ['concept_tree_of_life']$TABBED_NEW_LINE$- Modyfikatory planetarne: ['concept_pd_aw_tree_of_life_modifier']$NEW_LINE$- Skolonizowane planety:$TABBED_NEW_LINE$- Cecha planety: ['concept_pd_aw_tree_of_life_sapling']$NEW_LINE$- Kolonie bez §Ysadzonek drzewa życia§!:$TABBED_NEW_LINE$- Decyzja planetarna: ['concept_transplant_pd_aw_tree_of_life']$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] na koloniach Poddanych"
  origin_tooltip_pd_aw_tree_of_life_start_negative_effects: "- Nie można terraformować planet"
 
 #Concepts
@@ -14,69 +14,69 @@
  concept_pd_aw_tree_of_life_sapling: "$d_pd_aw_tree_of_life_colony$"
  concept_pd_aw_tree_of_life_sapling_desc: "- $MOD_LOGISTIC_GROWTH_MULT$: §G+10%§!\n- $mod_planet_jobs_society_research_produces_mult$: §G+10%§!\n- $MOD_PLANET_HOUSING_ADD$: §G+5§!\n- $mod_district_farming_max$: §G+2§!\n- Utrzymanie: 20 $i_food$\n- $MOD_PLANET_MAX_DISTRICTS_ADD$: §R-1§!\n\n§L$d_tree_of_life_colony_desc$§!"
  concept_transplant_pd_aw_tree_of_life: "$decision_pd_replant_aw_tree_of_life$"
- concept_transplant_pd_aw_tree_of_life_desc: "Przesadza Drzewo Życia na tej planecie.\n\n§L$decision_pd_replant_aw_tree_of_life_desc$§!"
+ concept_transplant_pd_aw_tree_of_life_desc: "Zasadź ponownie Drzewo Życia na tej planecie.\n\n§L$decision_pd_replant_aw_tree_of_life_desc$§!"
  concept_pd_aw_tree_of_life_holding: "$holding_tree_of_life_sapling$"
  concept_pd_aw_tree_of_life_holding_desc: "- $MOD_MONTHLY_LOYALTY_GAIN$: §G+1§!\n- $MOD_POP_ENVIRONMENT_TOLERANCE$: §G+10%§!\n- £food£ Żywność z £job_farmer£ ['concept_farmer']: §G+1§!\n- £mod_job_ranger_add£ ['concept_overlord_arborist', $job_overlord_arborist$] miejsca pracy: §G+1§!\n\n§L$holding_tree_of_life_sapling_desc$§!"
 
 #Deposit
- d_pd_aw_tree_of_life_home: "Drzewo Życia"
- d_pd_aw_tree_of_life_home_desc: "Drzewo Życia dawało schronienie i wsparcie Rojowi przez niezliczone pokolenia."
- d_pd_aw_tree_of_life_colony: "Sadzonka Drzewa Życia"
- d_pd_aw_tree_of_life_colony_desc: "Odrost Wielkiego Drzewa, przesadzony tutaj przez Rój. Potrzeba czasu, by osiągnął pełną dojrzałość."
- d_pd_aw_tree_of_life_bloomed: "Rozkwitłe Drzewo Życia"
- d_pd_aw_tree_of_life_bloomed_desc: "Wielkie Drzewo od niezliczonych pokoleń dawało schronienie i wsparcie Rojowi. Teraz, rozkwitłe, roztacza swoje dobroczynne oddziaływanie na każdego drona."
- d_pd_tree_of_life_habitat: "Stacja mieszkalna Drzewa Życia"
- d_pd_tree_of_life_habitat_desc: "Odrost Wielkiego Drzewa, przesadzony tutaj przez Rój. Ta miniaturowa wersja w obrębie siedliska nigdy nie osiągnie pełnego potencjału, ale wesprze drony stacjonujące w tym miejscu."
- d_pd_tree_of_life_ringworld: "Drzewo Życia na Świecie-Pierścieniu"
- d_pd_tree_of_life_ringworld_desc: "Odrost Wielkiego Drzewa, przesadzony tutaj przez Rój. Choć potrafi rosnąć na powierzchni świata-pierścienia, zbyt płytka warstwa gleby nie pozwala mu osiągnąć pełnych rozmiarów."
+ d_pd_aw_tree_of_life_home: "Drzewo życia"
+ d_pd_aw_tree_of_life_home_desc: "Drzewo życia dawało schronienie i wsparcie umysłowi zbiorowemu przez niezliczone pokolenia."
+ d_pd_aw_tree_of_life_colony: "Sadzonka drzewa życia"
+ d_pd_aw_tree_of_life_colony_desc: "Pęd wielkiego drzewa, przesadzony tutaj przez rój. Potrzeba czasu, by osiągnął pełną dojrzałość."
+ d_pd_aw_tree_of_life_bloomed: "Zakwitłe drzewo życia"
+ d_pd_aw_tree_of_life_bloomed_desc: "Wielkie drzewo od niezliczonych pokoleń dawało schronienie i wsparcie umysłowi zbiorowemu. Teraz, zakwitłe, roztacza swoje dobroczynne oddziaływanie na każdego drona."
+ d_pd_tree_of_life_habitat: "Stacja mieszkalna drzewa życia"
+ d_pd_tree_of_life_habitat_desc: "Odrośl wielkiego drzewa, przesadzony tutaj przez rój. Ta miniaturowa wersja w obrębie stacji mieszkalnej nigdy nie osiągnie pełnego potencjału, ale wesprze drony stacjonujące w tym miejscu."
+ d_pd_tree_of_life_ringworld: "Świat pierścieniowy drzewa życia"
+ d_pd_tree_of_life_ringworld_desc: "Odrośl wielkiego drzewa, przesadzony tutaj przez rój. Choć potrafi rosnąć na powierzchni świata pierścieniowego, to zbyt płytka warstwa gleby nie pozwala mu osiągnąć pełnych rozmiarów."
 
 #Planets
- pc_pd_megaflora_hive: "Świat megaflory"
+ pc_pd_megaflora_hive: "Świat Megaflory"
  pc_pd_megaflora_hive_desc: "Skalisty świat z atmosferą azotowo-tlenową, gęsto zalesiony i z dobrze rozwiniętą hydrosferą. Na jego powierzchni rośnie drzewo megaflory, psionicznie połączone z umysłem zbiorowym, który je pielęgnuje. System korzeniowy planety stanowi podstawową strukturę konstrukcyjną i mieszkalną roju. Choć proces jego wzrostu jest powolny, zdolności regeneracyjne czynią go łatwym do obrony i naprawy."
- trait_pc_pd_megaflora_hive_preference: "Preferencja: Świat Roju Megaflory"
+ trait_pc_pd_megaflora_hive_preference: "Preferencja - świat megaflory"
  trait_pc_pd_megaflora_hive_preference_desc:1 "$trait_pc_arctic_preference_desc$"
- pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania świata megaflory roju"
- mod_pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania świata roju megaflory"
- pc_pd_megaflora_hive_bloomed: "Świat Roju Megaflory"
- pc_pd_megaflora_hive_bloomed_desc: "Skalisty świat z atmosferą azotowo-tlenową, gęsto zalesiony i z dobrze rozwiniętą hydrosferą. Na jego powierzchni rośnie drzewo megaflory, psionicznie połączone z Umysłem Roju, który je pielęgnuje."
- trait_pc_pd_megaflora_hive_bloomed_preference: "Preferencja: Świat Roju Megaflory"
+ pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania świata megaflory"
+ mod_pc_pd_megaflora_hive_habitability: "Możliwość zamieszkania świata megaflory"
+ pc_pd_megaflora_hive_bloomed: "Świat Megaflory"
+ pc_pd_megaflora_hive_bloomed_desc: "Skalisty świat z atmosferą azotowo-tlenową, gęsto zalesiony i z dobrze rozwiniętą hydrosferą. Na jego powierzchni rośnie drzewo megaflory, psionicznie połączone z umysłem zbiorowym, który je pielęgnuje."
+ trait_pc_pd_megaflora_hive_bloomed_preference: "Preferencja - świat megaflory"
  trait_pc_pd_megaflora_hive_bloomed_preference_desc:1 "$trait_pc_arctic_preference_desc$"
- pc_pd_megaflora_hive_bloomed_habitability: "Możliwość zamieszkania świata roju megaflory"
- mod_pc_pd_megaflora_hive_bloomed_habitability: "Możliwość zamieszkania świata roju megaflory"
+ pc_pd_megaflora_hive_bloomed_habitability: "Możliwość zamieszkania świata megaflory"
+ mod_pc_pd_megaflora_hive_bloomed_habitability: "Możliwość zamieszkania świata megaflory"
 
 #Start Text
  START_SCREEN_PD_TREE_OF_LIFE: "Gdy przebudziliśmy się do świadomości, służyliśmy Drzewu, a Drzewo służyło nam. Opiekujemy się Drzewem, karmimy Drzewo, chronimy Drzewo, a Drzewo karmi nas. Dla dobra Drzewa rozprzestrzeniliśmy się po [GetHomeWorldName], sadząc i doglądając jego odrostów wszędzie, gdzie się udaliśmy.\n\nNasz świat służy Drzewu od stuleci, a jednak obawiamy się, że Drzewo nie jest całkowicie bezpieczne, odkąd poznaliśmy zagrożenia płynące z otchłani kosmosu. Od dawna wiemy, że to nie jedyna planeta; galaktyka pełna jest światów pozbawionych Drzew, a my pragniemy to zmienić.\n\nMusimy chronić Drzewo. Drzewo musi się rozprzestrzenić. Drzewo musi rosnąć."
 
 #Mofifiers
- pd_aw_tree_of_life_bloomed: "Rozkwitły Świat Drzewa Życia"
+ pd_aw_tree_of_life_bloomed: "Świat Zakwitłego Drzewa Życia"
  pd_aw_tree_of_life_bloomed_desc: "Wielkie Drzewo na tej planecie w pełni dojrzało i rozkwitło. Jego ogromny system korzeniowy zapewnia dodatkową przestrzeń dla dronów-robotników i jest w stanie wytrzymać znaczne uszkodzenia."
- pd_aw_tree_of_life_growing: "Wzrastająca Sadzonka Drzewa Życia"
+ pd_aw_tree_of_life_growing: "Wzrastająca sadzonka Drzewa Życia"
  pd_aw_tree_of_life_growing_desc: "Drony na tej planecie skupiają się na zakorzenieniu sadzonki Wielkiego Drzewa Życia, którą tutaj zasadziliśmy."
  pd_aw_tree_of_life_home: "Świat Drzewa Życia"
  pd_aw_tree_of_life_home_desc: "Wielkie Drzewo na tej planecie jest w pełni wyrośnięte. Jego system korzeniowy zapewnia miejsce dla dronów-robotników i naturalnie opiera się uszkodzeniom."
- d_pd_tree_of_life_ringarc: "Drzewo Życia na Świecie-Pierścieniu"
- d_pd_tree_of_life_ringarc_desc: "Wielkie Drzewo na tym świecie-pierścieniu jest tak w pełni rozwinięte, jak tylko pozwalają na to warunki. Jego system korzeniowy zapewnia przestrzeń dla dronów-robotników i naturalnie opiera się uszkodzeniom."
+ d_pd_tree_of_life_ringarc: "Drzewo Życia świata pierścieniowego"
+ d_pd_tree_of_life_ringarc_desc: "Wielkie Drzewo na tym świecie pierścieniowym jest tak w pełni rozwinięte, jak tylko pozwalają na to warunki. Jego system korzeniowy zapewnia przestrzeń dla dronów-robotników i naturalnie opiera się uszkodzeniom."
  pd_aw_no_lifetree: "Brak Drzewa Życia"
- pd_aw_no_lifetree_desc: "Bez Wielkiego Drzewa Życia Rój jest niekompletny."
+ pd_aw_no_lifetree_desc: "Bez Wielkiego Drzewa Życia rój jest niekompletny."
  pd_no_lifetree_arcology: "Brak Drzewa Życia"
  pd_no_lifetree_arcology_desc: "Planeta pokryta jest niekończącą się zabudową miejską, co czyni ją niezdolną do podtrzymania Drzewa Życia."
 
 #Decisions
  decision_pd_replant_aw_tree_of_life: "Przesadź Drzewo Życia"
- decision_pd_replant_aw_tree_of_life_desc: "Musimy zasadzić tutaj sadzonkę Wielkiego Drzewa Życia, aby nasz Rój mógł się rozwijać."
- decision_pd_aw_bloom_tree_of_life: "Rozkwit Drzewa Życia"
- decision_pd_aw_bloom_tree_of_life_desc: "Skłonienie Wielkiego Drzewa Życia do rozkwitu wymaga znacznego czasu i zasobów, ale dzięki temu odblokujemy jego pełen potencjał."
- decision_pd_aw_bloom_tree_of_life_tooltip: "Ta planeta zostanie przekształcona w §YRozkwitły $pc_pd_megaflora_hive_bloomed$§!.\n\nPodwaja £pop£ §Ymiejsca pracy§! i £housing£ §Ymieszkania§! zapewniane przez każdy dystrykt."
+ decision_pd_replant_aw_tree_of_life_desc: "Musimy zasadzić tutaj sadzonkę Wielkiego Drzewa Życia, aby nasz rój mógł się rozwijać."
+ decision_pd_aw_bloom_tree_of_life: "Rozkwitanie Drzewa Życia"
+ decision_pd_aw_bloom_tree_of_life_desc: "Skłonienie Wielkiego Drzewa Życia do rozkwitu wymaga znacznych zasobów i czasu, ale dzięki temu odblokujemy jego pełen potencjał."
+ decision_pd_aw_bloom_tree_of_life_tooltip: "Ta planeta zostanie przekształcona w §YRozkwitły $pc_pd_megaflora_hive_bloomed$§!.\n\nPodwaja £pop£ §Ymiejsca pracy§! i liczbę £housing£ §Ymieszkania§! zapewnianych przez każdą dzielnicę."
 
 #Ascension Perk
- ap_pd_tree_of_life_bloomed: "Kwitnienie światów megaflory roju"
+ ap_pd_tree_of_life_bloomed: "Kwitnienie światów megaflory"
  ap_pd_tree_of_life_bloomed_desc: "Możemy skłonić każde Wielkie Drzewo Życia do rozkwitu, odblokowując ich pełny potencjał."
  allow_tree_of_life_bloomed: "§HOdblokowuje decyzję:§! $decision_pd_aw_bloom_tree_of_life$"
- describe_tree_of_life_bloomed_worlds: "§YRozkwitłe $pc_pd_megaflora_hive_bloomed$s§! to specjalna klasa planet, niezamieszkana przez Populacje inne niż Umysły Roju, lecz nieograniczona w liczbie £district£ §Ygeneratorów§!, §Ykopalń§! i §Yfarm§!, jakie mogą wspierać. Wszystkie dystrykty mają podwojone £pop£ §Ymiejsca pracy§! i £housing£ §Ymieszkania§!. £pop£ §YPopy§! żyjące na §YRozkwitłych $pc_pd_megaflora_hive_bloomed$§! otrzymują premię do §Yprodukcji zasobów§! §G+10%§!."
+ describe_tree_of_life_bloomed_worlds: "§Y $pc_pd_megaflora_hive_bloomed$s§! to specjalna klasa planet, niezamieszkana przez Populacje inne niż Umysł zbiorowy, lecz nieograniczona w liczbie £district£ §Ydzielnic produkujących energię§!, §Ygórniczych§! i §Yrolniczych§!, jakie mogą wspierać. Wszystkie dzielnice mają podwojone £pop£ §Ymiejsca pracy§! i liczbę £housing£ §Ymieszkań§!. £pop£ §YPopy§! żyjące na §YRozkwitły $pc_pd_megaflora_hive_bloomed$§! otrzymują premię do §Yprodukcji zasobów§! §G+10%§!."
 
 #Holdings
  holding_pd_aw_tree_of_life_sapling: "Sadzonka megaflory drzewa życia"
- holding_pd_aw_tree_of_life_sapling_desc: "Zwierzchnik tak długo żył ze swoim Drzewem Życia Megaflory, że nie jest już w stanie wyobrazić sobie egzystencji bez niego. Teraz pragnie podzielić się tym samym darem ze swoimi wasalami."
+ holding_pd_aw_tree_of_life_sapling_desc: "Zwierzchnik tak długo żył ze swoim drzewem życia megaflory, że nie jest już w stanie wyobrazić sobie egzystencji bez niego. Teraz pragnie podzielić się tym samym darem ze swoimi wasalami."
 
 #Arcology - With Arc Sub Mod
  district_pd_flora_hive: "$district_hive$"
@@ -94,23 +94,23 @@
  district_pd_flora_hive_administrative: "Dzielnica synaptyczna"
  district_pd_flora_hive_administrative_desc: "Węzły synaptyczne wzmacniają psioniczne połączenia roju, rozszerzając jego wolę i przewodnictwo w kosmosie."
  district_pd_flora_hive_administrative_plural: "Dzielnice synaptyczne"
- pc_pd_flora_hive: "Świat korony megaflory"
- pc_pd_flora_hive_desc: "Ten Rój wyewoluował w symbiotycznej relacji z olbrzymim drzewem megaflory, którego korzenie rozprzestrzeniły się w każdy zakątek planety i zmieniły ekosystem, aby odpowiadał zarówno jemu, jak i dronom. Świat został rozwinięty w bastion zaawansowanych procesów myślowych i jest silnie broniony przez zamieszkujący go rój."
+ pc_pd_flora_hive: "Świat Korony Megaflory"
+ pc_pd_flora_hive_desc: "Ten rój wyewoluował w symbiotycznej relacji z olbrzymim drzewem megaflory, którego korzenie rozprzestrzeniły się w każdy zakątek planety i zmieniły ekosystem, aby odpowiadał zarówno jemu, jak i dronom. Świat został rozwinięty w bastion zaawansowanych procesów myślowych i jest silnie broniony przez zamieszkujący go rój."
  pc_pd_flora_hive_adj: "zalesiony"
  mod_pc_pd_flora_hive_habitability: "Możliwość zamieszkania świata korony megaflory"
- trait_pc_pd_flora_hive_preference: "Preferencje świata korony megaflory"
+ trait_pc_pd_flora_hive_preference: "Preferencja - świata korony megaflory"
  trait_pc_pd_flora_hive_preference_desc: "$trait_pc_arctic_preference_desc$"
- pd_aw_flora_hive_military: "Świat korony megaflory"
+ pd_aw_flora_hive_military: "Świat Korony Megaflory"
  pd_aw_flora_hive_military_desc: "Ten świat jest kluczowy dla rdzenia funkcjonowania umysłu zbiorowego megaflory i został ufortyfikowany przeciwko zewnętrznym zagrożeniom i wpływom. Potężna tarcza otacza planetę, a drony-wojownicy są gotowe zapewnić jej ochronę."
- decision_pd_flora_hive_crown_project: "Projekt megaflory – korona"
+ decision_pd_flora_hive_crown_project: "Projekt Megaflory – Korona"
  decision_pd_flora_hive_crown_project_desc: "Ten megafloralny świat zostanie rozwinięty w bastion zaawansowanych procesów myślowych dla świadomości umysłu zbiorowego."
  decision_pd_flora_hive_crown_project_effects: "Przekształca planetę w §Y$pc_pd_flora_hive$§!, zwiększając liczbę £housing£ §Ymieszkań§!, §Yprodukcję zasobów§! i §Yprzyrostu populacji§! oraz odblokowując specjalne £district£ §Ydzielnice arkologii§!, kosztem §Rzablokowania§! zasobów naturalnych, uniemożliwiając dalszą budowę £district£ §Ydzielnic produkujących energię§!, §Ygórniczych§! i §Yrolniczych§!."
- decision_pd_flora_hive_crown_project_effects_short: "Zwiększa £housing£ §Ymieszkania§!, §Yprodukcję zasobów§! i §Ywzrost populacji§!\nOdblokowuje £district£ §Ydzielnice arkologii§!\nBlokuje budowę £district£ §Ydzielnic produkujących energię§!, §Ygórniczych§! i §Yrolniczych§!"
+ decision_pd_flora_hive_crown_project_effects_short: "Zwiększa liczbę £housing£ §Ymieszkań§!, §Yprodukcję zasobów§! i §Yprzyrost populacji§!\nOdblokowuje £district£ §Ydzielnice arkologii§!\nBlokuje budowę £district£ §Ydzielnic produkujących energię§!, §Ygórniczych§! i §Yrolniczych§!"
  decision_pd_megaflora_capital_building: "Wznieś Wielkie Drzewo Życia"
  decision_pd_megaflora_capital_building_desc: "Aby zamanifestować potęgę i zasięg naszej zbiorowej świadomości, wyhodujemy potężne Wielkie Drzewo Życia. To majestatyczne drzewo znacząco wzmocni nasze operacje wśród gwiazd."
- decision_pd_megaflora_capital_building_effects: "Dodaje §Y$d_pd_megaflora_capital_building$§! do tej stolicy świata megaflory, wymieniając część potencjalnych dystryktów na wzmocnienie zdolności administracyjnych roju."
- d_pd_megaflora_capital_building: "Wielkie drzewo życia"
- d_pd_megaflora_capital_building_desc: "To drzewo góruje nad całą planetą, stanowiąc majestatyczny znak władzy. Jest ośrodkiem naszej zbiorowej woli, od którego rozchodzą się nasze korzenie ku gwiazdom."
+ decision_pd_megaflora_capital_building_effects: "Dodaje §Y$d_pd_megaflora_capital_building$§! do tej stolicy świata megaflory, wymieniając część potencjalnych dzielnic na wzmocnienie zdolności administracyjnych roju."
+ d_pd_megaflora_capital_building: "Wielkie Drzewo Życia"
+ d_pd_megaflora_capital_building_desc: "To Drzewo góruje nad całą planetą, stanowiąc majestatyczny znak władzy. Jest ośrodkiem naszej zbiorowej woli, od którego rozchodzą się nasze korzenie ku gwiazdom."
 
 #Jobs
  job_pd_tol_naval_admin_gestalt: "Dron logistyczny"
